@@ -750,3 +750,11 @@ set auto_index(sn_db_create_symbol_tags) [list source [file join $dir editorpane
 set auto_index(Sn_Highlight_Text) [list source [file join $dir editorpane.tcl]]
 set auto_index(sn_delete_editor_tags) [list source [file join $dir editorpane.tcl]]
 set auto_index(snpdbg_session) [list source [file join $dir snpdbg.tcl]]
+set auto_index(::checklist::checklist) [list source [file join $dir tools.tcl]]
+set auto_index(::checklist::ParseArguments) [list source [file join $dir tools.tcl]]
+set auto_index(::labelentrybutton::labelentrybutton) [list source [file join $dir tools.tcl]]
+set auto_index(::labelentrybutton::ParseArguments) [list source [file join $dir tools.tcl]]
+set auto_index(::labelentrybutton::lebcmd) [list source [file join $dir tools.tcl]]
+set auto_index(::labelentrybutton::select_file) [list source [file join $dir tools.tcl]]
+set auto_index(::TtkDialog::ttk_dialog_with_widgets) [list source [file join $dir dialog.tcl]]
+set auto_index(::TileDialog::CenterDialog) [list source [file join $dir dialog.tcl]]
